=(feat): Add all product cards

--- a/src/assets/styles/templates/collection.scss
+++ b/src/assets/styles/templates/collection.scss
@@ -1,73 +1,68 @@
 // your code here
 .Collection {
-  // display: flex;
-  // justify-content: center;
-  // box-sizing: border-box;
-  width: 100%;
-
-  .wrapper {
-    margin: 0 auto;
-    padding: 0 1rem;
-    width: 50%;
-  }
-
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 50%;
   .row {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
-    width: 70%;
+    width: 60%;
   }
 
   .column {
     display: flex;
     flex-direction: column;
-    flex-basis: 100%;
+    flex-basis: calc(100%/3);
     flex: 1;
   }
-  .product_container {
-    // display: flex;
-    // justify-content: space-around;
-    margin: 20px;
+
+  .product_card {
+    margin-bottom: 16px;
+    text-align: center;
+    width: 249px;
   }
 
-  .image_container {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin: 0 auto;
-    height: 409px;
-    width: 349px;
-    .product_image {
+  .img_container {
+    height: 309px;
+    width: 249px;
+    .product_img {
       justify-self: center;
-      margin: 0 auto;
       width: 100%;
     }
   }
 
   .details_container {
+    max-width: 249px;
     text-align: center;
   }
 
   .product_title {
-    font-size: 1.1rem;
-    width: fit-content;
+    font-size: 0.8rem;
     margin: 8px auto;
-  }
-
-  .price_copy {
-  }
-
-  .swatch_container {
-    margin: 32px auto;
     width: 80%;
+  }
 
-    .color {
-      border-radius: 50%;
-      background-color: #bbb;
-      display: inline-block;
-      height: 35px;
-      width: 35px;
-    }
+  .price {
+    margin-bottom: 8px;
+  }
+
+  .color_container {
+    margin: 0 auto;
+    width: 60%;
+  }
+
+  .color {
+    border-radius: 50%;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.3);
+    border: 2px solid #aaa;
+    cursor: pointer;
+
+    background-color: #0c0c0c;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
   }
 }
